[ci skip] Update translations (Catalan)

--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -426,4 +426,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="due_future">Venciment en el futur</string>
     <string name="completed">Completat</string>
     <string name="match_any">Coincideix amb qualsevol</string>
+    <string name="match_all">Coincideix amb tots</string>
 </resources>
