--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -414,8 +414,17 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="additional_contexts_and_projects">Conjuntos y proyectos adicionales</string>
     <string name="enter_space_seperated_contexts_and_projects_these_will">Introduzca @contexts y +projects separados por espacios. Estos siempre serán visibles en los diálogos de inserción de todo.txt.</string>
     <string name="infinite">Infinito</string>
-    <string name="search_project">Buscar proyectos</string>
-    <string name="search_context">Buscar contextos</string>
+    <string name="browse_by_project">Navegar por proyecto</string>
+    <string name="browse_by_context">Navegar por contexto</string>
     <string name="insert_project">Insertar proyectos</string>
     <string name="insert_context">Insert contexts</string>
+    <string name="browse_todo">Ver tarea pendiente</string>
+    <string name="browse_by_priority">Navegar por prioridad</string>
+    <string name="browse_by_due_date">Navegar por fecha límite</string>
+    <string name="due_overdue">Atrasado</string>
+    <string name="due_today">Vence hoy</string>
+    <string name="due_future">Vence en el futuro</string>
+    <string name="completed">Completado</string>
+    <string name="match_any">Coincidir Cualquier</string>
+    <string name="match_all">Coincidir todos</string>
 </resources>
