--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -414,8 +414,17 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="additional_contexts_and_projects">其他情境和项目</string>
     <string name="enter_space_seperated_contexts_and_projects_these_will">输入以空格分隔的 @情境 和 +项目 标签 。 您可以始终在 todo.txt 的插入对话框中看见这些选项。</string>
     <string name="infinite">不限</string>
-    <string name="search_project">搜索项目</string>
-    <string name="search_context">搜索情境</string>
+    <string name="browse_by_project">按项目浏览</string>
+    <string name="browse_by_context">按上下文浏览</string>
     <string name="insert_project">插入项目</string>
     <string name="insert_context">插入情境</string>
+    <string name="browse_todo">浏览土豆</string>
+    <string name="browse_by_priority">按优先级浏览</string>
+    <string name="browse_by_due_date">按到期日浏览</string>
+    <string name="due_overdue">过期时间</string>
+    <string name="due_today">今日到期</string>
+    <string name="due_future">将来到期</string>
+    <string name="completed">已完成</string>
+    <string name="match_any">任何匹配</string>
+    <string name="match_all">匹配全部</string>
 </resources>
