--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -360,6 +360,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="heading_3">Heading 3</string>
     <string name="heading_4">Heading 4</string>
     <string name="heading_5">Heading 5</string>
+    <string name="heading_6">Heading 6</string>
     <string name="bold">Bold</string>
     <string name="italic">Italic</string>
     <string name="highlighted">Highlighted</string>
