[ci skip] Update translations (Italian)

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -345,6 +345,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="heading_3">Titolo 3</string>
     <string name="heading_4">Titolo 4</string>
     <string name="heading_5">Titolo 5</string>
+    <string name="heading_6">Titolo 6</string>
     <string name="bold">Grassetto</string>
     <string name="italic">Corsivo</string>
     <string name="highlighted">Evidenziato</string>
