[ci skip] Update translations (German)

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -345,6 +345,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="heading_3">Überschrift 3</string>
     <string name="heading_4">Überschrift 4</string>
     <string name="heading_5">Überschrift 5</string>
+    <string name="heading_6">Überschrift 6</string>
     <string name="bold">Fett</string>
     <string name="italic">Kursiv</string>
     <string name="highlighted">Hervorgehoben</string>
