--- a/app/src/main/res/values-no/strings.xml
+++ b/app/src/main/res/values-no/strings.xml
@@ -345,6 +345,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="heading_3">Overskrift 3</string>
     <string name="heading_4">Overskrift 4</string>
     <string name="heading_5">Overskrift 5</string>
+    <string name="heading_6">Overskrift 6</string>
     <string name="bold">Bold</string>
     <string name="italic">Italic</string>
     <string name="highlighted">Uthevet</string>
