[ci skip] Update translations (Tamil)

--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -340,6 +340,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="heading_3">தலைப்பு 3</string>
     <string name="heading_4">தலைப்பு 4</string>
     <string name="heading_5">தலைப்பு 5</string>
+    <string name="heading_6">தலைப்பு 6</string>
     <string name="bold">தடித்த</string>
     <string name="italic">சாய்வெழுத்து</string>
     <string name="strikeout">அடித்திடு</string>
